# Spending_list

./: .gitignore  README.md  manage.py  pyproject.toml
Spending_list/: asgi.py  settings.py  urls.py  wsgi.py
Spending_list/apps/spending_operations/: admin.py  apps.py  managers.py  models.py  urls.py
Spending_list/apps/support_chat/: apps.py  forms.py  models.py
Spending_list/apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
static/: navbar.css
static/user/css/: login.css
templates/: 404.html  base.html
templates/include/: _navbar.html
templates/user/: email_confirmation.html  login.html
