[tool.poetry]
name = "spending-list"
version = "0.1.0"
description = ""
authors = ["Kuleb1n <v_vpyt@mail.ru>"]
readme = "README.md"
packages = [{include = "spending_list"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
